bugfix- lesson names being cut off in lesson divs

--- a/polymath/core/static/css/newstylesheet.css
+++ b/polymath/core/static/css/newstylesheet.css
@@ -1487,10 +1487,22 @@ body#teach a#teachnav {
 }
 
 
+.nav li.selected {
+	background:url(images/pixel_pattern.png) left top,  #A2D101; 
+	background:url(images/pixel_pattern.png) left top,  -moz-linear-gradient(top, #A2D101 0%, #80B000 100%);	
+	background:url(images/pixel_pattern.png) left top,  -webkit-gradient(linear, left top, left bottom, color-stop(0%,#A2D101), color-stop(100%,#80B000));
+	background:url(images/pixel_pattern.png) left top, -webkit-linear-gradient(top, #A2D101 0%,#80B000 100%);
+	background:url(images/pixel_pattern.png) left top,  -o-linear-gradient(top, #A2D101 0%,#80B000 100%); 
+	background:url(images/pixel_pattern.png) left top,  -ms-linear-gradient(top, #A2D101 0%,#80B000 100%); 
+	background:url(images/pixel_pattern.png) left top,  linear-gradient(top, #A2D101 0%,#80B000 100%); 
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A2D101', endColorstr='#80B000',GradientType=0 );
+	background-repeat:repeat;
+}
+
 .nav li.selected ul{
 	display:block;
 	position:absolute;
-	margin-top:51px;
+	margin-top:53px;
 	right:-10px;
 	padding:0;
 	box-shadow:0px 0px 10px rgba(0,0,0,0.2);
@@ -4485,6 +4497,10 @@ a.remove_lesson_lnk:hover{
 	text-shadow:0px -1px 1px rgba(0,0,0,0.3);
 	font-weight:normal;
 	cursor:pointer;
+}
+
+.aboutsidebar li.selected a:hover{
+	color:white;
 }
 
 .aboutsidebar li:hover{
